--- a/packages/wisptools:powercode-commission/client/templates/reports.html
+++ b/packages/wisptools:powercode-commission/client/templates/reports.html
@@ -35,8 +35,8 @@
   {{#unless haveData}}  
     <div class="row">
       <form class="download-report">
-        <div class="col-md-10"><h3>Commission Report</h3></div>
-        <div class="col-md-10"><button type="submit" class="btn btn-primary">Download</button></div>
+        <div class="col-md-9"><h3>Commission Report</h3></div>
+        <div class="col-md-3"><button type="submit" class="btn btn-block btn-primary">Download</button></div>
       </form>
     </div>
     <table id="wtPowercodeCommissionReportTable" class="table table-striped table-bordered">
