fixed formatting issues and added router config template helpers

--- a/packages/wisptools:managed-router-ui/client/templates/interface.html
+++ b/packages/wisptools:managed-router-ui/client/templates/interface.html
@@ -1,17 +1,17 @@
 <template name="wtFriendlyTechInterface">
-	<div class="row">
+  <div class="row">
     <div class="col-xs-8">
-        <h2>Managed Router - David Salick</h2>
+      <h2>Managed Router - David Salick</h2>
     </div>
-	</div>
-	<div class="row">
+  </div>
+  <div class="row">
     <div class="col-xs-10">
       <div class="row">
         <div class="col-xs-3">
           <strong>Status:</strong>
         </div>
         <div class="col-xs-9 status-box">
-        	{{{CPEStatus}}}
+          {{{CPEStatus}}}
         </div>
       </div>
       <div class="row">
@@ -19,21 +19,21 @@
           <strong>Last Check In:</strong>
         </div>
         <div class="col-xs-9 check-in-box">
-          <!--12/14/2015 11:00 PM (39 minutes and 55 seconds ago)--> {{{lastCheckIn}}}
+          {{{lastCheckIn}}}
         </div>
       </div>
       <div class="row">
         <div class="col-xs-3">
           <strong>Uptime:</strong>
         </div>
-      	<div class="col-xs-9 uptime-box">
+        <div class="col-xs-9 uptime-box">
           {{{UpTime}}}
         </div>
       </div>
     </div>
     <div class="col-xs-2">
-        <a href="#" id="acs-refresh" class="btn btn-block btn-primary btn-lg ladda-button" data-style="zoom-out" data-size="l"><span class="ladda-label">Refresh</span></a>
-    </div>    
+      <a href="#" id="acs-refresh" class="btn btn-block btn-primary btn-lg ladda-button" data-style="zoom-out" data-size="l"><span class="ladda-label">Refresh</span></a>
+    </div>
   </div>
   {{> wtTabPage tabData=tabData}}
 </template>
