--- a/packages/wisptools:load-in-modal/css/modalStyle.css
+++ b/packages/wisptools:load-in-modal/css/modalStyle.css
@@ -1,12 +1,13 @@
 .modal-dialog {
   width: 100%;
-  height: 100%;
+  height: 90%;
   margin: 0;
-  padding: 0;
+  padding-left:5%;
+  padding-right: 5%;
 }
 
 .modal-content {
   height: auto;
-  min-height: 100%;
+  min-height: 90%;
   border-radius: 0;
 }
