--- a/packages/wisptools:load-in-modal/css/modalStyle.css
+++ b/packages/wisptools:load-in-modal/css/modalStyle.css
@@ -1,10 +1,10 @@
 .modal-dialog {
   width: 100%;
+  max-width: 1300px;
   height: 90%;
-  margin: 0;
-  margin-top: 6px;
-  padding-left:5%;
-  padding-right: 5%;
+  margin-top: 15px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .modal-content {
