adjusting the style of the modal

--- a/packages/wisptools:load-in-modal/css/modalStyle.css
+++ b/packages/wisptools:load-in-modal/css/modalStyle.css
@@ -2,9 +2,11 @@
   width: 100%;
   max-width: 1300px;
   height: 90%;
-  margin-top: 15px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
+}
+
+.modal-container {
+  padding: 15px;
 }
 
 .modal-content {
