Collections working. Adding domain completed

--- a/packages/wisptools:managed-router-domains/client/templates/managedomains.html
+++ b/packages/wisptools:managed-router-domains/client/templates/managedomains.html
@@ -16,9 +16,9 @@
           <tr>
             <td>
               <div class="input-group">
-                <input type="text" class="form-control" aria-label="Domain Name">
+                <input type="text" class="form-control" aria-label="Domain Name" id="domainName">
                 <span class="input-group-addon">
-                  <input type="checkbox" aria-label="Update ACS"> Update ACS
+                  <input type="checkbox" aria-label="Update ACS" id="updateACS"> Update ACS
                 </span>
               </div>
             </td>
