changing homepage text

--- a/application/client/templates/home.html
+++ b/application/client/templates/home.html
@@ -4,9 +4,11 @@
       <center>
         <h2>Welcome to ReadyNet Control</h2>
         <br />
-        <h3>Super Simple</h3>
-        <h3>Manage From Anywhere</h3>
-        <h3>Real-Time Diagnostics</h3>
+        <h3>Easily Control</h3>
+        <h3>Wi-Fi Routers, LTE Routers, DSL Routers, ATAs, IP Phones</h3>
+        <br />
+        <p>Free for your first 5 routers. Click Join above to create an account now.</p>
+        <p>RNControl.com manages ReadyNet routers and other TR-069 capable devices.</p>
         <br />
         <img src="/img/rncontrol-screenshot.png" class="img-responsive" alt="">
       </center>
