--- a/packages/wisptools:managed-router-domains/client/templates/managedomains.html
+++ b/packages/wisptools:managed-router-domains/client/templates/managedomains.html
@@ -12,11 +12,11 @@
         <tbody>
           {{#each domainList}}
           <tr>
-            <td class="domainName">
+            <td class="domainName editable" style="cursor: pointer;">
               {{#if editingDomain}}
                 <input class="form-control" type="text" id="editDomain" value="{{domain}}">
               {{else}}
-                {{domain}}
+                {{domain}}<span style="padding-left:10px; color:#A0A0A0; display:none;" class="pull-right"><i class="fa fa-pencil fa-1" aria-hidden="true"></i></span>
               {{/if}}
             </td>
             <td>
