--- a/packages/wisptools:accounts-invite/client/templates/invite.html
+++ b/packages/wisptools:accounts-invite/client/templates/invite.html
@@ -1,3 +1,20 @@
 <template name="wtAccountsInviteInvite">
-  
+  <div class="bg-secondary app-page">
+    <div class="container">
+      <h3>Invite users to join your domain ({{domainName}}).</h3><hr />
+      <form class="form-horizontal col-md-8">
+        <div class="form-group">
+          <label for="inviteEmail" class="col-sm-2 control-label">Email</label>
+          <div class="col-sm-10">
+            <input type="email" class="form-control" id="inviteEmail" placeholder="Email">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button class="btn btn-default sendInvitationBtn">Send Invitation</button>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
 </template>
