--- a/packages/wisptools:braintree/client/templates/settings.html
+++ b/packages/wisptools:braintree/client/templates/settings.html
@@ -2,17 +2,18 @@
   <div class="bg-secondary app-page">
     <div class="container">
       <h3>Braintree Settings</h3><hr />
+      {{#with braintreeSettings}}
       <form class="form-horizontal col-md-8">
         <div class="form-group">
           <label for="publickey" class="col-sm-2 control-label">Public Key</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" id="publickey" placeholder="Public Key">
+            <input type="text" class="form-control" id="publickey" placeholder="Public Key" value="{{publicKey}}">
           </div>
         </div>
         <div class="form-group">
           <label for="privatekey" class="col-sm-2 control-label">Private Key</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" id="privatekey" placeholder="Private Key">
+            <input type="text" class="form-control" id="privatekey" placeholder="Private Key" value="{{privateKey}}">
           </div>
         </div>
         <div class="form-group">
@@ -36,6 +37,7 @@
           </div>
         </div>
       </form>
+      {{/with}}
     </div>
   </div>
 </template>
