--- a/packages/wisptools:braintree/client/templates/settings.html
+++ b/packages/wisptools:braintree/client/templates/settings.html
@@ -20,15 +20,15 @@
           <label for="environment" class="col-sm-2 control-label">Environment</label>
           <div class="col-sm-10">
             <select id="environment" class="form-control">
-              <option value="production">Production</option>
-              <option value="sandbox">Sandbox</option>
+              <option value="production" {{selected 'production'}}>Production</option>
+              <option value="sandbox" {{selected 'sandbox'}}>Sandbox</option>
             </select>
           </div>
         </div>
         <div class="form-group">
           <label for="merchantid" class="col-sm-2 control-label">Merchant Id</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" id="merchantid" placeholder="Merchant Id">
+            <input type="text" class="form-control" id="merchantid" placeholder="Merchant Id" value="{{merchantId}}">
           </div>
         </div>
         <div class="form-group">
