Worked on Braintree API integration

--- a/packages/wisptools:braintree-customers/client/templates/add.html
+++ b/packages/wisptools:braintree-customers/client/templates/add.html
@@ -4,9 +4,15 @@
       <h3>Add Braintree Customer</h3><hr />
       <form class="form-horizontal col-md-8">
         <div class="form-group">
-          <label for="name" class="col-sm-2 control-label">Name</label>
+          <label for="firstname" class="col-sm-2 control-label">First Name</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" id="name" placeholder="Name">
+            <input type="text" class="form-control" id="firstname" placeholder="First Name">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="lastname" class="col-sm-2 control-label">Last Name</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="lastname" placeholder="Last Name">
           </div>
         </div>
         <div class="form-group">
@@ -24,7 +30,7 @@
         <div class="form-group">
           <label for="address" class="col-sm-2 control-label">Address</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" id="Address" placeholder="Address">
+            <input type="text" class="form-control" id="address" placeholder="Address">
           </div>
         </div>
         <div class="form-group">
