--- a/packages/wisptools:braintree-customers/client/templates/customers.html
+++ b/packages/wisptools:braintree-customers/client/templates/customers.html
@@ -2,30 +2,50 @@
   <div class="bg-secondary app-page">
     <div class="container">
       <h3>Braintree Customers</h3><hr />
-      <table class="table">
-        <thead>
-          <tr>
-            <th>Customer Id</th>
-            <th>Name</th>
-            <th>Phone</th>
-            <th>Email</th>
-            <th>Domain</th>
-            <th>Created</th>
-          </tr>
-        </thead>
-        <tbody>
-          {{#each customers}}
-          <tr>
-            <td>{{ customerId }}</td>
-            <td>{{ firstName }} {{ lastName }}</td>
-            <td>{{ phone }}</td>
-            <td>{{ email }}</td>
-            <td>{{ domain }}</td>
-            <td>{{ createdAt }}</td>
-          </tr>
-          {{/each}}
-        </tbody>
-      </table>
+      <div class="row">
+          <form class="form-inline">
+            <div class="form-group">
+              <input type="text" class="form-control" id="searchBox" placeholder="Search">
+            </div>
+            <button class="btn btn-primary searchBtn">Search</button>
+            <button class="btn btn-success addCustomerBtn">Add Customer</button>
+          </form>
+      </div>
+      <hr />
+      <div class="row">
+        {{#if hasSearchFilter}}
+        <div class="alert alert-info" role="alert">
+          Results filtered by "{{ getSearchFilter }}".
+          (<a class="clearFilter">Clear filter</a>)
+        </div>
+        {{/if}}
+      </div>
+      <div class="row">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Customer Id</th>
+              <th>Name</th>
+              <th>Phone</th>
+              <th>Email</th>
+              <th>Domain</th>
+              <th>Created</th>
+            </tr>
+          </thead>
+          <tbody>
+            {{#each customers}}
+            <tr>
+              <td>{{ customerId }}</td>
+              <td>{{ firstName }} {{ lastName }}</td>
+              <td>{{ phone }}</td>
+              <td>{{ email }}</td>
+              <td>{{ domain }}</td>
+              <td>{{ createdAt }}</td>
+            </tr>
+            {{/each}}
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 </template>
