--- a/packages/wisptools:braintree/client/templates/plans.html
+++ b/packages/wisptools:braintree/client/templates/plans.html
@@ -2,7 +2,34 @@
   <div class="bg-secondary app-page">
     <div class="container">
       <h3>Braintree Plans</h3><hr />
-
+      <div class="row">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Description</th>
+              <th>Price</th>
+              <th>Billing Frequency</th>
+            </tr>
+          </thead>
+          <tbody>
+            {{#if hasPlans}}
+              {{#each plans}}
+              <tr>
+                <td>{{ name }}</td>
+                <td>{{ description }}</td>
+                <td>{{ currencyIsoCode }} {{ price }}</td>
+                <td>{{ billingFrequency }} Months</td>
+              </tr>
+              {{/each}}
+            {{else}}
+              <tr>
+                <td colspan="4">No plans</td>
+              </tr>
+            {{/if}}
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 </template>
