Work on Braintree customer details page

--- a/packages/wisptools:braintree/client/templates/plans.html
+++ b/packages/wisptools:braintree/client/templates/plans.html
@@ -3,6 +3,11 @@
     <div class="container">
       <h3>Braintree Plans</h3><hr />
       <div class="row">
+        <div class="alert alert-info" role="alert">
+          Please login to your Braintree dashboard to add, edit or delete plans.
+        </div>
+      </div>
+      <div class="row">
         <table class="table">
           <thead>
             <tr>
