--- a/packages/wisptools:braintree-customers/client/templates/customers.html
+++ b/packages/wisptools:braintree-customers/client/templates/customers.html
@@ -30,6 +30,7 @@
               <th>Email</th>
               <th>Domain</th>
               <th>Created</th>
+              <th>Actions</th>
             </tr>
           </thead>
           <tbody>
@@ -41,6 +42,10 @@
               <td>{{ email }}</td>
               <td>{{ domain }}</td>
               <td>{{ createdAt }}</td>
+              <td>
+                <button class="btn btn-primary detailsBtn">Details</button>
+                <button class="btn btn-warning editBtn">Edit</button>
+              </td>
             </tr>
             {{/each}}
           </tbody>
