--- a/packages/wisptools:braintree-customers/client/templates/customer-details.html
+++ b/packages/wisptools:braintree-customers/client/templates/customer-details.html
@@ -1,3 +1,25 @@
 <template name="wtBraintreeCustomerDetails">
-
+  <div class="bg-secondary app-page">
+    <div class="container">
+      {{#with customer}}
+      <h3>Braintree Customer ({{ customerId }})</h3><hr />
+      <div class="row">
+        <table class="table table-bordered">
+          <tbody>
+            <tr><th>Customer Id</th><td>{{ customerId }}</td></tr>
+            <tr><th>Name</th><td>{{ firstName }} {{ lastName }}</td></tr>
+            <tr><th>Phone</th><td>{{ phone }}</td></tr>
+            <tr><th>Email</th><td>{{ email }}</td></tr>
+            <tr><th>Address</th><td>{{ address }}</td></tr>
+            <tr><th>City</th><td>{{ city }}</td></tr>
+            <tr><th>State</th><td>{{ state }}</td></tr>
+            <tr><th>Zip</th><td>{{ zip }}</td></tr>
+            <tr><th>Domain</th><td>{{ domain }}</td></tr>
+            <tr><th>Created</th><td>{{ createdAt }}</td></tr>
+          </tbody>
+        </table>
+      </div>
+      {{/with}}
+    </div>
+  </div>
 </template>
