Work on add payment method form

--- a/packages/wisptools:braintree-customers/client/templates/customer-edit.html
+++ b/packages/wisptools:braintree-customers/client/templates/customer-edit.html
@@ -71,6 +71,9 @@
       {{/if}}
       <h4>Payment Methods</h4>
       <div class="row">
+        {{ > wtBraintreeAddPaymentMethodForm }}
+      </div>
+      <div class="row">
         <table class="table table-bordered">
           <thead>
             <tr>
